@@ -12,10 +12,12 @@ import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.example.jewelryWeb.models.DTO.ProductDTO;
+import com.example.jewelryWeb.models.DTO.ProductEditDTO;
 import com.example.jewelryWeb.models.Entity.Category;
 import com.example.jewelryWeb.models.Entity.Gender;
 import com.example.jewelryWeb.models.Entity.ImageData;
@@ -45,7 +47,9 @@ public class ProductService {
     public Product addProduct(Product product) {
         return productRepository.save(product);
     }
-
+    public List<Product> searchByName(String name) {
+        return productRepository.findByProductNameContainingIgnoreCase(name);
+    }
     public Product createProduct(ProductDTO productDTO) throws IOException {
         if (isProductNameDuplicate(productDTO.getProductName())) {
             throw new IllegalArgumentException("Product name already exists: " + productDTO.getProductName());
@@ -66,7 +70,6 @@ public class ProductService {
             }
         }
 
-        // Tạo Product
         Product product = Product.builder()
                 .productName(productDTO.getProductName())
                 .category(category)
@@ -98,30 +101,100 @@ public class ProductService {
         productRepository.delete(product);
     }
 
-    public Product editProduct(Long productId, ProductDTO productDTO) throws IOException {
+    // public Product editProduct(Long productId, ProductDTO productDTO) throws IOException {
+    //     Product product = productRepository.findById(productId)
+    //             .orElseThrow(() -> new IllegalArgumentException("Product not found with ID: " + productId));
+    //     if (!product.getProductName().equals(productDTO.getProductName()) &&
+    //             isProductNameDuplicate(productDTO.getProductName())) {
+    //         throw new IllegalArgumentException("Product name already exists: " + productDTO.getProductName());
+    //     }
+    //     Set<ImageData> currentImages = new HashSet<>();
+    //     if (product.getImages() != null && !product.getImages().isEmpty()) {
+    //         List<Long> currentImageIds = Arrays.stream(product.getImages().split(","))
+    //                 .map(Long::valueOf)
+    //                 .toList();
+    //         currentImages.addAll(imageDataRepository.findAllById(currentImageIds));
+    //     }
+    //     Set<ImageData> newImages = new HashSet<>();
+    //     Set<String> newImageNames = new HashSet<>();
+    //     if (productDTO.getImages() != null) {
+    //         for (MultipartFile file : productDTO.getImages()) {
+    //             String newName = file.getOriginalFilename();
+    //             newImageNames.add(newName);
+    //             Optional<ImageData> existingImage = currentImages.stream()
+    //                     .filter(img -> img.getName().equals(newName))
+    //                     .findFirst();
+
+    //             if (existingImage.isPresent()) {
+    //                 newImages.add(existingImage.get());
+    //             } else {
+    //                 ImageData newImage = imageDataRepository.save(
+    //                         ImageData.builder()
+    //                                 .name(newName)
+    //                                 .type(file.getContentType())
+    //                                 .imageData(ImageUtils.compressImage(file.getBytes()))
+    //                                 .build());
+    //                 newImages.add(newImage);
+    //             }
+    //         }
+    //     }
+    //     for (ImageData currentImage : currentImages) {
+    //         if (!newImageNames.contains(currentImage.getName())) {
+    //             boolean isReferenced = productRepository.existsByImageId(currentImage.getId().toString());
+    //             if (isReferenced) {
+    //                 imageDataRepository.deleteById(currentImage.getId());
+    //             }
+    //         }
+    //     }
+
+    //     product.setProductName(productDTO.getProductName());
+    //     product.setCategory(
+    //             categoryRepository.findById(productDTO.getCategoryId())
+    //                     .orElseThrow(() -> new IllegalArgumentException(
+    //                             "Category not found with ID: " + productDTO.getCategoryId())));
+    //     product.setPrice(productDTO.getPrice());
+    //     product.setMetallicColor(productDTO.getMetallicColor());
+    //     product.setRingBelt(productDTO.getRingBelt());
+    //     product.setMaterial(productDTO.getMaterial());
+    //     product.setDiscount(productDTO.getDiscount());
+    //     Set<String> finalImageIds = newImages.stream()
+    //             .map(image -> String.valueOf(image.getId()))
+    //             .collect(Collectors.toSet());
+    //     product.setImages(String.join(",", finalImageIds));
+
+    //     product.setIsFeatured(productDTO.getIsFeatured());
+    //     product.setIsActive(productDTO.getIsActive());
+    //     return productRepository.save(product);
+    // }
+    public Product editProduct(Long productId, ProductEditDTO productDTO) throws IOException {
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new IllegalArgumentException("Product not found with ID: " + productId));
+    
         if (!product.getProductName().equals(productDTO.getProductName()) &&
                 isProductNameDuplicate(productDTO.getProductName())) {
             throw new IllegalArgumentException("Product name already exists: " + productDTO.getProductName());
         }
+    
         Set<ImageData> currentImages = new HashSet<>();
         if (product.getImages() != null && !product.getImages().isEmpty()) {
             List<Long> currentImageIds = Arrays.stream(product.getImages().split(","))
                     .map(Long::valueOf)
-                    .toList();
+                    .collect(Collectors.toList());
             currentImages.addAll(imageDataRepository.findAllById(currentImageIds));
         }
-        Set<ImageData> newImages = new HashSet<>();
+    
         Set<String> newImageNames = new HashSet<>();
+        Set<ImageData> newImages = new HashSet<>();
+    
         if (productDTO.getImages() != null) {
             for (MultipartFile file : productDTO.getImages()) {
                 String newName = file.getOriginalFilename();
                 newImageNames.add(newName);
+    
                 Optional<ImageData> existingImage = currentImages.stream()
                         .filter(img -> img.getName().equals(newName))
                         .findFirst();
-
+    
                 if (existingImage.isPresent()) {
                     newImages.add(existingImage.get());
                 } else {
@@ -135,15 +208,23 @@ public class ProductService {
                 }
             }
         }
+    
         for (ImageData currentImage : currentImages) {
-            if (!newImageNames.contains(currentImage.getName())) {
-                boolean isReferenced = productRepository.existsByImageId(currentImage.getId().toString());
-                if (isReferenced) {
-                    imageDataRepository.deleteById(currentImage.getId());
-                }
+            if (!newImageNames.contains(currentImage.getName()) && 
+                !productDTO.getExistingImages().contains(currentImage.getId())) {
+                imageDataRepository.deleteById(currentImage.getId());
             }
         }
-
+    
+        Set<String> finalImageIds = new HashSet<>(productDTO.getExistingImages().stream()
+                .map(String::valueOf)
+                .collect(Collectors.toSet()));
+    
+        finalImageIds.addAll(newImages.stream()
+                .map(image -> String.valueOf(image.getId()))
+                .collect(Collectors.toSet()));
+    
+        product.setImages(String.join(",", finalImageIds));
         product.setProductName(productDTO.getProductName());
         product.setCategory(
                 categoryRepository.findById(productDTO.getCategoryId())
@@ -154,16 +235,11 @@ public class ProductService {
         product.setRingBelt(productDTO.getRingBelt());
         product.setMaterial(productDTO.getMaterial());
         product.setDiscount(productDTO.getDiscount());
-        Set<String> finalImageIds = newImages.stream()
-                .map(image -> String.valueOf(image.getId()))
-                .collect(Collectors.toSet());
-        product.setImages(String.join(",", finalImageIds));
-
         product.setIsFeatured(productDTO.getIsFeatured());
         product.setIsActive(productDTO.getIsActive());
+    
         return productRepository.save(product);
     }
-
     public List<Product> filterProducts(String material, String metallicColor, Gender gender, BigDecimal minPrice,
             BigDecimal maxPrice) {
         Specification<Product> spec = Specification.where(ProductSpecification.hasMaterial(material))
